# m2g

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO
include/m2g/drawables/: animation.hpp  sprite.hpp
lib/: CMakeLists.txt
project/: m2g.pro
src/: graphics_library.cpp  graphics_library.hpp  m2g.cpp  m2g.hpp
src/dependencies/: dependencies.hpp
src/dependencies/SDL_SavePNG/: savepng.cpp  savepng.hpp
src/drawables/: animation.cpp  animation.hpp  animation_data.cpp  animation_data.hpp  animation_state.cpp  animation_state.hpp  collidable.cpp  collidable.hpp  drawable.cpp  drawable.hpp  drawables_set.cpp  drawables_set.hpp  sprite.cpp  sprite.hpp  tile_sprite.cpp  tile_sprite.hpp  tileset.cpp  tileset.hpp
src/drawables/particles_systems/: particle.hpp  particle_system.cpp  particle_system.hpp  particle_systems_group.cpp  particle_systems_group.hpp  particles_generation.cpp  particles_generation.hpp  particles_set.cpp  particles_set.hpp  particlesystem.cpp  particlesystem.hpp  ps_tileset_info.cpp  ps_tileset_info.hpp
src/gui/: gui.cpp  gui.hpp
src/gui/interfaces/: event_listener.hpp
src/gui/widgets/: book.cpp  book.hpp  book_page.cpp  book_page.hpp  button.cpp  button.hpp  text_button.cpp  text_button.hpp  widget.cpp  widget.hpp
src/samples/book/: book.cpp
src/samples/gui/buttons/: buttons.cpp
src/samples/kernel/: sample_app.cpp  sample_app.hpp
src/samples/text/: text_area_sample.cpp
src/tests/: graphics_library.cpp  m2g.cpp  main.cpp  testing.hpp
src/tests/drawables/: animation.cpp  animation_data.cpp  animation_state.cpp  tile_sprite.cpp  tileset.cpp
src/tests/mocks/: mock_tileset.hpp
src/text/: bitmap_font.cpp  bitmap_font.hpp  text_area.cpp  text_area.hpp  text_renderer.cpp  text_renderer.hpp  text_surface.cpp  text_surface.hpp  text_texture.cpp  text_texture.hpp
src/utilities/: alignment.cpp  alignment.hpp  rect.cpp  rect.hpp  tilesets_buffer.cpp  tilesets_buffer.hpp
tests/: CMakeLists.txt
